2002-09-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/batch.c, src/draw.c, src/gerb_image.h, src/gerber.c, 
	  src/gerber.h: Changed how multiquadrant circles are supported.
	  Now it's more of a state, before it was considered an interpolation.
	  Therefore not all multiquadrant circles were detected as such and
	  got defined wrong. Some parts of the EAGLECAD_KLUDGE was removed,
 	  though EagleCad had some other surprises in store.
	* src/amacro.[hc], draw.c, draw_amacro.[hc]: Dynamic allocation
	  of stack when drawing aperture macros. Closes the evil bug 603147.
	

2002-09-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/batch.c, src/draw.c, src/gerb_image.h, src/gerber.c:
	  Polygon drawing got it's own gc (pgc) since we must have 
	  our own outline pen size. Now we don't have to have an aperture
	  defined to be able to draw polygon areas. Closes bug 602965.
	* Removed PAREA_FILL as an interpolation. Has only PAREA_START
	  and PAREA_END left so the application has to keep track if it's
	  in polygon area fill or not by itself. PAREA_FILL was not a
	  proper "interpolation", it is instead any of the other 
	  interpolations. Closes bug 603146.


2002-09-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: Polygon Area Fill could never have worked at
	  all since number of points reported to gdk_draw_polygon
	  always was zero.

2002-08-31  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (redraw_pixmap): Removed redundant bounding
	  box calculation.

2002-08-27  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h, src/gerbv_icon.h: Calculate
	  proper initial translation when doing autoscale. Center image.
	  Added #define for extra 0.1 inches in autoscale. New icon image.
	  Also added outline debugging code (within #ifdef's).

2002-08-27  Andreas Andersson  <e92_aan@e.kth.se>

	* src/drill.c: Minor change to the drill file format guessing
	  logic to allow for yet another special case.
